[project]
name = "gluonts"
dynamic = ["version", "readme"]
description = "Probabilistic time series modeling in Python."
requires-python = ">=3.7"

[tool.black]
target-version = ['py38']
line-length = 79

[tool.pytest.ini_options]
minversion = "6.0"
timeout = 60
addopts = """
    --color=yes
    --doctest-modules
    --ignore src/gluonts/block.py
    --ignore src/gluonts/distribution.py
    --ignore src/gluonts/kernels.py
    --ignore src/gluonts/representation.py
    --ignore src/gluonts/trainer.py
"""
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = "test"
filterwarnings = "ignore"

[tool.ruff]
line-length = 79

lint.ignore = [
    "E501",  # line-length is handled by black
    "E741"  # TODO: remove usage of `l`
]

exclude = ["src/gluonts/nursery"]


[tool.docformatter]
black = true
pre-summary-newline = true
make-summary-multi-line = true
wrap-descriptions = 79

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
follow_imports = "silent"

[tool.setuptools.dynamic]
version = {attr = "gluonts.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.isort]
known_first_party = "gluonts"
known_third_party = [
    "mxnet",
    "numpy",
    "pandas",
    "pytest",
    "scipy",
    "tqdm",
    "torch",
    "lightning",
]
line_length = 79
profile = "black"
