[aliases]
test = pytest --addopts --cov=gluonts
tests = pytest --addopts --cov=gluonts

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[metadata]
description-file = public/README.md

[flake8]
max-line-length = 120
ignore = E203, E252, W503, E704

[tool:pytest]
testpaths = test
addopts = -v --doctest-modules --color=yes