[metadata]
name = GluonTS

url = https://github.com/awslabs/gluonts/
project_urls =
    Documentation = https://ts.gluon.ai/stable/
    Source Code = https://github.com/awslabs/gluonts/

author = Amazon
author_email = gluon-ts-dev@amazon.com
maintainer_email = gluon-ts-dev@amazon.com

license = Apache License 2.0

description = Probabilistic time series modeling in Python.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6


[aliases]
test = pytest --addopts --cov=src/gluonts
tests = pytest --addopts --cov=src/gluonts

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[tool:pytest]
testpaths = test
addopts = -v --doctest-modules --color=yes

[mypy]
plugins = pydantic.mypy, gluonts.meta._mypy_plugin
