[metadata]
name = gluonts
version = attr: gluonts.__version__
url = https://github.com/awslabs/gluonts/
project_urls =
    Documentation = https://ts.gluon.ai/stable/
    Source Code = https://github.com/awslabs/gluonts/
license = Apache License 2.0
license_file = LICENSE
author = Amazon
author_email = gluon-ts-dev@amazon.com
maintainer_email = gluon-ts-dev@amazon.com
description = Probabilistic time series modeling in Python.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find_namespace:
package_dir = = src
include_package_data = True

[options.packages.find]
where = src
include = gluonts*

[options.entry_points]
pygments.styles =
    gluonts-dark = gluonts.meta.style:Dark

[aliases]
test = pytest --addopts --cov=src/gluonts
tests = pytest --addopts --cov=src/gluonts

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[mypy]
plugins = pydantic.mypy
