[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "meta-tfs"
packages = [
  {include = "*", from = "src"},
]
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "^1.18.43"
botocore = "^1.21.43"
click = "^8.0.1"
geomloss = "^0.2.4"
gluonts = {git = "https://github.com/awslabs/gluon-ts.git"}
pandas = "^1.3.1"
python = "^3.8,<3.10"
pytorch-lightning = "^1.4.4"
sagemaker = "^2.218.0"
scikit-learn = "^1.4.0"
torch = "^2.2.0"
sagemaker-training = "^3.9.2"
python-dotenv = "^0.19.0"
xlrd = "^2.0.1"
lightkit = "^0.3.5"
catch22 = "^0.2.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.9.3"
jupyter = "^1.0.0"
pylint = "^2.10.2"

[tool.poetry.scripts]
schedule = 'schedule:main'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.messages_control]
disable = [
  "arguments-differ",
  "duplicate-code",
  "missing-module-docstring",
  "invalid-name",
  "no-self-use",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-instance-attributes",
]

[tool.pylint.typecheck]
generated-members = [
  "math.*",
  "torch.*",
]

[tool.pyright]
reportIncompatibleMethodOverride = false
reportMissingStubTypes = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
typeCheckingMode = "strict"

[tool.black]
line-length = 79

[tool.isort]
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
known_first_party = ["embeddings"]
line_length = 99
lines_between_sections = 0
profile = "black"
skip_gitignore = true
